[gd_scene load_steps=3 format=3 uid="uid://cxpcg8fotkc26"]

[ext_resource type="Script" uid="uid://blymupmj027rq" path="res://src/game/environment/healing_zone.gd" id="1_vio67"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xvdk6"]
radius = 70.45566

[node name="HealingZone" type="Area2D"]
collision_mask = 4
script = ExtResource("1_vio67")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_xvdk6")
debug_color = Color(2.117753e-06, 0.56978476, 0.8450765, 0.41960785)

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
